@@ -1,4 +1,4 @@
-dnl $Id: acinclude.m4,v 1.5 1999/08/07 00:26:35 sbooth Exp $
+dnl $Id: acinclude.m4,v 1.6 2002/02/05 23:44:07 sbooth Exp $
 
 dnl @TOP@
 
@@ -11,7 +11,7 @@ AC_DEFUN(CGICC_CHECK_LINK_STDCPP, [
 		[	AC_LANG_SAVE
 			AC_LANG_CPLUSPLUS
 			AC_TRY_LINK([#include <iostream>],
-			cout << "foo" << endl;,
+			std::cout << "foo" << std::endl;,
 			cgicc_cv_link_libstdcpp=no,
 			cgicc_cv_link_libstdcpp=yes)
 			AC_LANG_RESTORE
@@ -56,6 +56,19 @@ AC_DEFUN(CGICC_CHECK_CPP_NAMESPACES, [
 		])
 ])
 
+dnl CGICC_CHECK_ACC
+AC_DEFUN(CGICC_CHECK_ACC, [
+	AC_CACHE_CHECK(
+		[whether the C++ compiler ($CXX) is aCC],
+		[cgicc_cv_acc],
+		[	if echo $CXX | grep 'HP ANSI C++'> /dev/null 2>&1; then
+				cgicc_cv_acc=yes
+			else
+				cgicc_cv_acc=no
+			fi
+			
+	])
+])
 
 
 
