@@ -1,3 +1,11 @@
+2002-02-05  Stephen F. Booth  <sbooth@gnu.org>
+
+	* acinclude.m4(CGICC_CHECK_LINK_STDCPP): Use std:: namespace
+	qualifier
+	* acinclude.m4: Added CGICC_CHECK_ACC function
+	* configure.ac: Added support for aCC
+	* demo/Makefile.am: Added support for aCC
+
 2002-02-04  Stephen F. Booth  <sbooth@gnu.org>
 
 	* win/cgicc.dsp: Modified for version 3.2
